--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/sequelize": "^10.0.1",
+    "mysql2": "^3.10.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
@@ -31,6 +34,8 @@
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.0",
     "jest": "^29.5.0",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
